--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
 /* CSS Custom Properties Definitions */
-
 :root {
   --maxWidth-none: "none";
   --maxWidth-xs: 20rem;
@@ -27,10 +26,10 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
-  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
+  --fontFamily-sans: 'Noto Sans KR', sans-serif,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
+  --fontFamily-serif: 'Noto Sans KR', sans-serif,
     Times, serif;
   --font-body: var(--fontFamily-serif);
   --font-heading: var(--fontFamily-sans);
@@ -55,11 +54,13 @@
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
   --color-primary: #005b99;
-  --color-text: #2e353f;
+  --color-text: #333e4c;
   --color-text-light: #4f5969;
   --color-heading: #1a202c;
   --color-heading-black: black;
   --color-accent: #d1dce5;
+  --color-pink: #fa5252;
+  --color-gray: #90949a;
 }
 
 /* HTML elements */
@@ -196,6 +197,10 @@ li > ul {
   margin-top: calc(var(--spacing-8) / 2);
 }
 
+code[class*="language-"] {
+  font-size: var(--fontSize-0) !important;
+}
+
 blockquote {
   color: var(--color-text-light);
   margin-left: calc(-1 * var(--spacing-6));
@@ -266,17 +271,23 @@ a:focus {
 
 .post-list-item p {
   margin-bottom: var(--spacing-0);
+  font-size: var(--fontSize-0);
 }
 
 .post-list-item h2 {
-  font-size: var(--fontSize-4);
-  color: var(--color-primary);
-  margin-bottom: var(--spacing-2);
+  font-size: var(--fontSize-2);
+  color: var(--color-text);
+  font-weight: bold;
+  margin-bottom: var(--spacing-1);
   margin-top: var(--spacing-0);
 }
 
 .post-list-item header {
-  margin-bottom: var(--spacing-4);
+  margin-bottom: var(--spacing-1);
+}
+
+.post-list-item small {
+  color: var(--color-gray);
 }
 
 .header-link-home {
