--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,7 @@ html {
 
 body {
   font-family: var(--font-body);
-  font-size: var(--fontSize-1);
+  font-size: 14px;
   color: var(--color-text);
 }
 
@@ -125,19 +125,19 @@ h1 {
 }
 
 h2 {
-  font-size: var(--fontSize-5);
-}
-
-h3 {
-  font-size: var(--fontSize-4);
-}
-
-h4 {
   font-size: var(--fontSize-3);
 }
 
-h5 {
+h3 {
   font-size: var(--fontSize-2);
+}
+
+h4 {
+  font-size: var(--fontSize-1);
+}
+
+h5 {
+  font-size: var(--fontSize-1);
 }
 
 h6 {
@@ -207,7 +207,7 @@ blockquote {
   margin-right: var(--spacing-8);
   padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
   border-left: var(--spacing-1) solid var(--color-primary);
-  font-size: var(--fontSize-2);
+  font-size: var(--fontSize-0);
   font-style: italic;
   margin-bottom: var(--spacing-8);
 }
@@ -260,7 +260,7 @@ a:focus {
 }
 
 .main-heading {
-  font-size: var(--fontSize-7);
+  font-size: var(--fontSize-4);
   margin: 0;
 }
 
@@ -297,6 +297,24 @@ a:focus {
   font-size: var(--fontSize-2);
 }
 
+.blog-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 180px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  font-weight: var(--fontWeight-bold);
+  font-size: var(--fontSize-2);
+  background-image: url('https://user-images.githubusercontent.com/89053583/130458672-b25789ac-0369-4942-8677-22a0245021f3.png');
+}
+
+.blog-image span {
+  font-size: var(--fontSize-1);
+}
+
+
 .bio {
   display: flex;
   margin-bottom: var(--spacing-16);
@@ -319,7 +337,7 @@ a:focus {
 }
 
 .blog-post header p {
-  font-size: var(--fontSize-2);
+  font-size: var(--fontSize-1);
   font-family: var(--font-heading);
 }
 
