이펙티브 자바스크립트 아이템 8,9

--- a/src/style.css
+++ b/src/style.css
@@ -198,7 +198,7 @@ li > ul {
 }
 
 code[class*="language-"] {
-  font-size: var(--fontSize-0) !important;
+  font-size: 12px !important;
 }
 
 blockquote {
